Tue Jul  6 00:29:03 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkuimanager.c (do_updates): 
	(do_updates_idle): Only call GDK_THREADS_ENTER() / _LEAVE() 
	when called from an idle handler.  (#145429, Jan-Marek Glogowski)

Mon Jul  5 23:47:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkfilechooserutils.c (delegate_notify): Use
	the less efficient g_object_interface_find_property () instead
	of the param_id range check, since the GParamSpecs we're 
	dealing with are the overridden onces on the interface, whose
	param_id is always zero.  (#145312, Alex Roitman, fix proposed
	by Owen Taylor)

2004-07-05  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* gtk/gtklayout.c (gtk_layout_add): added a default method for the add
	virtual method of GtkContainer.
	(gtk_layout_class_init): assign gtk_layout_add to the 'add' virtual
	method slot of the container class.

2004-07-05  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkiconview.c: (gtk_icon_view_set_markup_column):
	* gtk/gtkiconview.h:
	Use gint, not int in gtk_icon_view_set_markup_column,
	(Paolo Maggi)
	
2004-07-05  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkiconview.c: (gtk_icon_view_class_init),
	(gtk_icon_view_real_select_cursor_item),
	(gtk_icon_view_real_activate_cursor_item):
	* gtk/gtkiconview.h:
	Add an "activate_cursor_item" action signal
	and bind it to the return key.
	
2004-07-04  Anders Carlsson  <andersca@gnome.org>

	* demos/gtk-demo/Makefile.am:
	* demos/gtk-demo/gnome-fs-directory.png:
	* demos/gtk-demo/gnome-fs-regular.png:
	* demos/gtk-demo/iconview.c: (load_pixbufs), (fill_store),
	(sort_func), (create_store), (item_activated), (up_clicked),
	(home_clicked), (do_iconview):
	Add a simple file browser based on the icon view.
	
	* gtk/gtk.h:
	Add gtk/gtkiconview.h
	
	* gtk/gtkiconview.c: (gtk_icon_view_layout),
	(gtk_icon_view_item_new), (gtk_icon_view_item_activated):
	Fix a few bugs discovered while writing the demo.
	
2004-07-04  Anders Carlsson  <andersca@gnome.org>

	* gtk/Makefile.am: